--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   shared_preferences: ^2.2.1
   get_it: ^7.6.4
   logger: ^1.1.0
+  omni_datetime_picker: ^1.0.9
+  full_screen_image: ^2.0.0
 
 dev_dependencies:
   flutter_test:
