--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   logger: ^1.1.0
   omni_datetime_picker: ^1.0.9
   full_screen_image: ^2.0.0
+  firebase_messaging: ^14.7.0
+  flutter_local_notifications: ^16.1.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
