--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_messaging: ^14.7.0
   flutter_local_notifications: ^16.1.0
   http: ^1.1.0
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
